@@ -1623,6 +1623,10 @@ qc pass: p4lang: packout on port
 qc pass: p4lang: packout on vlan port
 qc pass: p4lang: packout on macsec port
 qc pass: p4lang: packout on macsec vlan port
+qc pass: p4lang: ipsec with packout
+qc pass: p4lang: openvpn with packout
+qc pass: p4lang: wireguard with packout
+qc pass: p4lang: wireguard over vlan with packout
 qc pass: p4lang: routing
 qc pass: p4lang: bridging
 qc pass: p4lang: mpls core
