@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v24.1.2-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2024-01-02 06:13:09, took 00:10:43, with 60 workers, on 530 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-01-02 12:22:47, took 00:09:41, with 60 workers, on 534 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -229,10 +229,14 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt110.tst">p4lang-crypt110.tst</a></td><td>success</td><td>p4lang: sgt over l2tp3</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt111.tst">p4lang-crypt111.tst</a></td><td>success</td><td>p4lang: macsec over tmux</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt112.tst">p4lang-crypt112.tst</a></td><td>success</td><td>p4lang: sgt over tmux</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/p4lang-packo01.tst">p4lang-packo01.tst</a></td><td>success</td><td>p4lang: packout on port</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/p4lang-packo02.tst">p4lang-packo02.tst</a></td><td>success</td><td>p4lang: packout on vlan port</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/p4lang-packo03.tst">p4lang-packo03.tst</a></td><td>success</td><td>p4lang: packout on macsec port</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/p4lang-packo04.tst">p4lang-packo04.tst</a></td><td>success</td><td>p4lang: packout on macsec vlan port</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt113.tst">p4lang-crypt113.tst</a></td><td>success</td><td>p4lang: packout on port</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt114.tst">p4lang-crypt114.tst</a></td><td>success</td><td>p4lang: packout on vlan port</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt115.tst">p4lang-crypt115.tst</a></td><td>success</td><td>p4lang: packout on macsec port</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt116.tst">p4lang-crypt116.tst</a></td><td>success</td><td>p4lang: packout on macsec vlan port</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt117.tst">p4lang-crypt117.tst</a></td><td>success</td><td>p4lang: ipsec with packout</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt118.tst">p4lang-crypt118.tst</a></td><td>success</td><td>p4lang: openvpn with packout</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt119.tst">p4lang-crypt119.tst</a></td><td>success</td><td>p4lang: wireguard with packout</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-crypt120.tst">p4lang-crypt120.tst</a></td><td>success</td><td>p4lang: wireguard over vlan with packout</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout001.tst">p4lang-rout001.tst</a></td><td>success</td><td>p4lang: routing</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout002.tst">p4lang-rout002.tst</a></td><td>success</td><td>p4lang: bridging</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout003.tst">p4lang-rout003.tst</a></td><td>success</td><td>p4lang: mpls core</td></tr>
